tests/compiler/diagnostics-engine/tests/invalid-term-token/expected.txt
error: Unexpected token ')' while parsing term.
 --> source.jack:4:23
  |
4 |         let m = (2 + -) + y;
  |                       ^
note: Expected start of term: literal, identifier, '(', or unary operator.
